--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URI=mongodb+srv://dbuser:dbuser@cluster0.adgpn.mongodb.net/quotes?retryWrites=true&w=majority
+DATABASE_URI=mongodb+srv://example:example@bkwai-zormh.mongodb.net/test
